@@ -1,9 +1,9 @@
 Package: nimbleAPT
 Type: Package
 Title: Adaptive Parallel Tempering for 'NIMBLE'
-Version: 1.0.6
+Version: 1.0.7
 Encoding: UTF-8
-Date: 2024-04-19
+Date: 2025-01-06
 Maintainer: David Pleydell <david.pleydell@inrae.fr>
 Authors@R: c(
  person("David", "Pleydell", email="david.pleydell@inrae.fr", role=c("aut","cre","cph"), comment = c("Package developer", ORCID = "0000-0002-6450-1475")),
@@ -15,7 +15,7 @@ URL: https://github.com/DRJP/nimbleAPT
 Description: Functions for adaptive parallel tempering (APT) with NIMBLE models. Adapted from 'Lacki' & 'Miasojedow' (2016) <DOI:10.1007/s11222-015-9579-0> and 'Miasojedow, Moulines and Vihola' (2013) <DOI:10.1080/10618600.2013.778779>.
 License: BSD_3_clause + file LICENSE
 Copyright: See COPYRIGHTS file.
-RoxygenNote: 7.3.1
+RoxygenNote: 7.3.2
 Depends:
     R (>= 3.1.2),
     nimble
