@@ -1,3 +1,11 @@
+                            CHANGES IN VERSION 1.0.7 (April 2024)
+USER LEVEL CHANGES
+-- None
+
+BUG FIXES
+-- Updates to links in Rd files, to clairfy which functions come from the nimble package.
+
+
                             CHANGES IN VERSION 1.0.6 (April 2024)
 USER LEVEL CHANGES
 -- printTemps == TRUE now disables progress bar.
